<resources>
    <string name="app_name">ComposeRedditApp</string>
    <string name="default_username">u/johndoe</string>
    <string name="home">Home</string>
    <string name="subreddits">Subreddits</string>
    <string name="new_post">New Post</string>
    <string name="my_profile">My Profile</string>
    <string name="choose_community">Choose a community</string>
    <string name="saved">Saved</string>
    <string name="default_karma_amount">555</string>
    <string name="karma">Karma</string>
    <string name="default_reddit_age_amount">10m 10d</string>
    <string name="reddit_age">Reddit age</string>
    <string name="settings">Settings</string>
    <string name="communities">COMMUNITIES</string>
    <string name="trophies">TROPHIES</string>
    <string name="subreddit_header">r/%s</string>
    <string name="award">Award</string>
    <string name="post_header">Posted by u/%s - %s</string>
    <string name="recently_visited_subreddits">Recently visited subreddits</string>
    <string name="digitalnomad">r/digitalnomad</string>
    <string name="covid19">r/covid19</string>
    <string name="memes">r/memes</string>
    <string name="humor">r/humor</string>
    <string name="worldnews">r/worldnews</string>
    <string name="dogs">r/dogs</string>
    <string name="cats">r/cats</string>
    <string name="all">All</string>
    <string name="public_network">Reddit Public Access Network</string>
    <string name="kodeco">r/kodeco</string>
    <string name="members_120k">120k members</string>
    <string name="members_600k">600k members</string>
    <string name="members_400k">400k members</string>
    <string name="members_500k">500k members</string>
    <string name="hello_android_devs">Hello Android devs!</string>
    <string name="welcome_to_android">Welcome to Android!</string>
    <string name="hello_programmers">Hello programers!</string>
    <string name="welcome_to_kodeco">Welcome to kodeco!</string>
    <string name="android">r/android</string>
    <string name="programming">r/programming</string>
    <string name="androiddev">r/androiddev</string>
    <string name="title">An interesting title</string>
    <string name="body_text">Your text post (optional)</string>
    <string name="save_post">SAVE</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="about">About</string>
    <string name="verified_email">Verified Email</string>
    <string name="gold_medal">Gold Medal</string>
    <string name="top_comment">Top Comment</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="home_icon">Home icon</string>
    <string name="subscriptions_icon">Subscriptions icon</string>
    <string name="post_icon">Post icon</string>
    <string name="change_theme">Change theme</string>
    <string name="more_actions">More actions</string>
    <string name="save">Saved</string>
    <string name="post_header_description">Post Header</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="post_action">Post action</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="subreddit_image">Subreddit Image</string>
    <string name="subreddit_icon">Subreddit Icon</string>
    <string name="community_icon">Community Icon</string>
    <string name="kodeco_com">r/kodeco.com</string>
    <string name="dummy_coment_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed iaculis dui, sit amet vehicula.</string>
    <string name="dummy_coment_2">Morbi consectetur fringilla tristique. Mauris sit amet condimentum neque. Phasellus posuere tellus ut eros malesuada.</string>
    <string name="dummy_coment_3">Sed ultrices sem ut risus rutrum dictum. Nullam ex augue.</string>
    <string name="dummy_coment_4">Nunc sed mi nec augue.</string>
    <string name="dummy_coment_5">Sed at sapien sed risus sagittis porta. In in fermentum magna. Mauris pharetra ex mi, non congue ligula rhoncus euismod.</string>
    <string name="dummy_coment_6">Aliquam magna sem, elementum eget lectus ut, iaculis hendrerit elit.</string>
    <string name="dummy_coment_7">Nam eleifend eu magna et lacinia. Proin.</string>
    <string name="dummy_coment_8">Aliquam mauris felis, facilisis vel fermentum vel, bibendum non justo. Integer non magna massa. Pellentesque habitant.</string>
    <string name="get_started_by_tapping_the_new_chat_button_here_or_on_the_someone_s_profile">Get started by tapping the new chat button here or on the someone\'s profile.</string>
    <string name="your_chats_will_show_up_here">Your chats will show up here.</string>
    <string name="trending_image">Trending Image</string>
    <string name="r_digitalnomad">r/digitalnomad</string>
    <string name="r_memes">r/memes</string>
    <string name="r_humor">r/humor</string>
    <string name="r_worldnews">r/worldnews</string>
    <string name="r_dogs">r/dogs</string>
    <string name="r_cats">r/cats</string>
    <string name="r_dogss">r/dogs</string>
    <string name="app_widget_description">Subreddits</string>
</resources>